# ldcopy

./: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  copy.c  copy.h  ldd.c  ldd.h  libraries.c  libraries.h  main.c
